[tool.poetry]
name = "nautilus_trader"
version = "1.78.0"
description = "An algorithmic trading platform and event-driven backtester"
authors = ["Christopher Sellers <info@nautechsystems.io>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://nautechsystems.io"
repository = "https://github.com/nautechsystems/nautilus_trader"
classifiers = [
"Development Status :: 4 - Beta",
"License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
"Programming Language :: Python :: 3.6",
"Programming Language :: Python :: 3.7",
"Programming Language :: Python :: 3.8",
]
packages = [
    {include = "nautilus_trader"},
]
include = [
    # Compiled extensions must be included in the wheel distributions
    {path = "nautilus_trader/**/*.so", format = "wheel"},
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.6.8"
cython = "^0.29.21"
empyrical = "^0.5.3"
# `importlib.metadata` is in the Python stdlib from 3.8 onwards
importlib-metadata = {version = "^1.2.0", python = "<3.8"}
lz4 = "^3.1.0"
matplotlib = "^3.3"
msgpack = "^1.0.0"
numpy = "^1.19.1"
pandas = "^1.0.5"
psutil = "^5.7.0"
pymongo = "^3.10.1"
pytz = "^2020.1"
pyzmq = "^19.0.1"
redis = "3.5.3"
scipy = "^1.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
numpydoc = "^1.1.0"
pre-commit = { version = "^2.7.1", python = "^3.6.1" }
pytest = "^6.0"
pytest-cov = "^2.10"
pytest-xdist = {extras = ["psutil"], version = "^2.1.0"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--dist=loadscope --numprocesses=auto -ra --cov=nautilus_trader --cov-report=xml"

[tool.isort]
src_paths = ["examples", "nautilus_trader", "scripts", "tests", "tools"]
atomic = true
combine_as_imports = true
ensure_newline_before_comments = true
force_grid_wrap = false
force_single_line = true
force_sort_within_sections = true
include_trailing_comma = true
known_first_party = ["examples", "nautilus_trader", "tests"]
known_third_party = []
lexicographical = true
line_length = 88
lines_after_imports = 1
lines_between_types = 1
multi_line_output = 3
single_line_exclusions = "typing"
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy", "setuptools"]
build-backend = "poetry.core.masonry.api"
